--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,4 +18,5 @@ services:
     restart: always
     environment:
       BOT_TOKEN: ${BOT_TOKEN}
+      GPT_URL: http://109.107.178.170
       CONNECTION: mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@localhost:27017
