--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - 27017:27017
     volumes:
       - ~/mongodb/data/db:/data/db
+      - /opt/bot/documents:/assets/documents
+      - /opt/bot/photos:/assets/photos
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
